--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 
 [deps]
 BinaryProvider = "b99e7846-7c00-51b0-8f62-c81ae34c0232"
+Coverage = "a2441757-f6aa-5fb2-8edb-039e3f45d037"
 Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 
 [extras]
